<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#012350">

    <ImageView
        android:layout_gravity="top|center"
        android:layout_marginBottom="40dp"
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mainicon" />



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="4dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="#094f88"
        android:radius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/new_user"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="Autofill,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/emailaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="TouchTargetSizeCheck"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioGroup
                android:id="@+id/accountType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_type"
                    android:textColor="@color/white" />

                <RadioButton
                    android:outlineSpotShadowColor="#012350"
                    android:id="@+id/userlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Commuter"
                    android:textColor="@color/white"
                    android:checked="true"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/driverlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver"
                    android:textColor="@color/white"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:background="#0e80b4"
                android:text="Register" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/already_have_an_account" />

                <TextView
                    android:id="@+id/loginnowbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text=" Login now"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
